# pipeLineReader

./: CMakeLists.txt  README.md  child.cpp  exec.cpp  parent.cpp  parent.h  pipe.cpp  pipe.h
